# snowflake-connector-rs

./: Cargo.toml
examples/: external_browser_auth.rs
src/: lib.rs  query.rs  row.rs
src/auth/: external_browser.rs  key_pair.rs  mod.rs
tests/: common.rs  test-basic-operations.rs  test-chunk.rs  test-decode.rs
