[package]
name = "snowflake-connector-rs"
version = "0.6.5"
edition = "2021"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
description = "A Rust client for Snowflake"
readme = "README.md"
repository = "https://github.com/estie-inc/snowflake-connector-rs"
license = "MIT"
keywords = ["snowflake", "database", "sql", "client"]

[dependencies]
http = "1.3"
reqwest = { version = "0.12", features = [
    "json",
    "gzip",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.17", features = ["v4"] }
flate2 = "1.1"
tokio = { version = "1.45", features = ["rt", "net", "time"] }
chrono = "0.4"
pkcs8 = { version = "0.10", features = ["pem", "pkcs5", "encryption"] }
rsa = "0.9"
sha2 = "0.10"
base64 = "0.22"
jsonwebtoken = "9.3"

# Optional dependencies for external browser authentication
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
webbrowser = { version = "1.0", optional = true }
rand = { version = "0.9", optional = true }
url = { version = "2.5", optional = true }

[features]
external-browser-authenticator = ["axum", "tower", "webbrowser", "rand", "url"]

[dev-dependencies]
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "external_browser_auth"
required-features = ["external-browser-authenticator"]
